// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers peersReducer should correctly connectFailure 1`] = `
Object {
  "connecting": false,
  "disconnecting": false,
  "peer": null,
  "peerForm": Object {
    "host": "",
    "isOpen": false,
    "pubkey": "",
  },
  "peers": Array [],
  "peersLoading": false,
  "searchQuery": "",
}
`;

exports[`reducers peersReducer should correctly connectPeer 1`] = `
Object {
  "connecting": true,
  "disconnecting": false,
  "peer": null,
  "peerForm": Object {
    "host": "",
    "isOpen": false,
    "pubkey": "",
  },
  "peers": Array [],
  "peersLoading": false,
  "searchQuery": "",
}
`;

exports[`reducers peersReducer should correctly connectSuccess 1`] = `
Object {
  "connecting": false,
  "disconnecting": false,
  "peer": null,
  "peerForm": Object {
    "host": "",
    "isOpen": false,
    "pubkey": "",
  },
  "peers": Array [
    "foo",
  ],
  "peersLoading": false,
  "searchQuery": "",
}
`;

exports[`reducers peersReducer should correctly disconnectFailure 1`] = `
Object {
  "connecting": false,
  "disconnecting": false,
  "peer": null,
  "peerForm": Object {
    "host": "",
    "isOpen": false,
    "pubkey": "",
  },
  "peers": Array [],
  "peersLoading": false,
  "searchQuery": "",
}
`;

exports[`reducers peersReducer should correctly disconnectPeer 1`] = `
Object {
  "connecting": false,
  "disconnecting": true,
  "peer": null,
  "peerForm": Object {
    "host": "",
    "isOpen": false,
    "pubkey": "",
  },
  "peers": Array [],
  "peersLoading": false,
  "searchQuery": "",
}
`;

exports[`reducers peersReducer should correctly disconnectSuccess 1`] = `
Object {
  "connecting": false,
  "disconnecting": false,
  "peer": null,
  "peerForm": Object {
    "host": "",
    "isOpen": false,
    "pubkey": "",
  },
  "peers": Array [],
  "peersLoading": false,
  "searchQuery": "",
}
`;

exports[`reducers peersReducer should correctly getPeers 1`] = `
Object {
  "connecting": false,
  "disconnecting": false,
  "peer": null,
  "peerForm": Object {
    "host": "",
    "isOpen": false,
    "pubkey": "",
  },
  "peers": Array [],
  "peersLoading": true,
  "searchQuery": "",
}
`;

exports[`reducers peersReducer should correctly receivePeers 1`] = `
Object {
  "connecting": false,
  "disconnecting": false,
  "peer": null,
  "peerForm": Object {
    "host": "",
    "isOpen": false,
    "pubkey": "",
  },
  "peers": "foo",
  "peersLoading": false,
  "searchQuery": "",
}
`;

exports[`reducers peersReducer should correctly setPeer 1`] = `
Object {
  "connecting": false,
  "disconnecting": false,
  "peer": "foo",
  "peerForm": Object {
    "host": "",
    "isOpen": false,
    "pubkey": "",
  },
  "peers": Array [],
  "peersLoading": false,
  "searchQuery": "",
}
`;

exports[`reducers peersReducer should correctly setPeerForm 1`] = `
Object {
  "connecting": false,
  "disconnecting": false,
  "peer": null,
  "peerForm": Object {
    "0": "f",
    "1": "o",
    "2": "o",
    "host": "",
    "isOpen": false,
    "pubkey": "",
  },
  "peers": Array [],
  "peersLoading": false,
  "searchQuery": "",
}
`;

exports[`reducers peersReducer should handle initial state 1`] = `
Object {
  "connecting": false,
  "disconnecting": false,
  "peer": null,
  "peerForm": Object {
    "host": "",
    "isOpen": false,
    "pubkey": "",
  },
  "peers": Array [],
  "peersLoading": false,
  "searchQuery": "",
}
`;
